WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313412
[GTK][WPE] REGRESSION(
312071@main
): ASSERTION FAILED: !m_target in ~CoordinatedPlatformLayer()
https://bugs.webkit.org/show_bug.cgi?id=313412
Summary
[GTK][WPE] REGRESSION(312071@main): ASSERTION FAILED: !m_target in ~Coordinat...
Fujii Hironori
Reported
2026-04-27 03:46:04 PDT
[GTK][WPE] REGRESSION(
312071@main
): ASSERTION FAILED: !m_target in ~CoordinatedPlatformLayer()
312071@main
added a new assertion. It fails by running layout tests.
> NUMBER_OF_PROCESSORS=50 ./Tools/Scripts/build-webkit --gtk --release --cmakeargs=-DENABLE_ASSERTS=1 > ./Tools/Scripts/run-webkit-tests --gtk --release --no-retry --iter=1000 --exit-after-n-crash=1 fast/dom/Document/early-document-access.html -f
ASSERTION FAILED: !m_target ../../../Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayer.cpp(77) : virtual WebCore::CoordinatedPlatformLayer::~CoordinatedPlatformLayer() 1 0x7f1099386fca WebCore::CoordinatedPlatformLayer::~CoordinatedPlatformLayer() 2 0x7f109938705e WebCore::CoordinatedPlatformLayer::~CoordinatedPlatformLayer() 3 0x7f1099285185 WebKit::CoordinatedSceneState::~CoordinatedSceneState() 4 0x7f109928820d WebKit::LayerTreeHost::~LayerTreeHost() 5 0x7f1099288352 WebKit::LayerTreeHost::~LayerTreeHost() 6 0x7f1099286478 WebKit::DrawingAreaCoordinatedGraphics::~DrawingAreaCoordinatedGraphics() 7 0x7f10992243d6 WebKit::WebPage::close() 8 0x7f10982fefe2 void IPC::handleMessage<Messages::WebPage::Close, IPC::Connection, WebKit::WebPage, WebKit::WebPage, void ()>(IPC::Connection&, IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)()) 9 0x7f10982f737d WebKit::WebPage::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 10 0x7f109896c4fd IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) 11 0x7f1098978ffc WebKit::AuxiliaryProcess::dispatchMessage(IPC::Connection&, IPC::Decoder&) 12 0x7f109820060a WebKit::AuxiliaryProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) 13 0x7f109895f8f5 IPC::Connection::dispatchMessage(IPC::Decoder&) 14 0x7f109895febc IPC::Connection::dispatchMessage(WTF::UniqueRef<IPC::Decoder>) 15 0x7f10989602ae IPC::Connection::dispatchOneIncomingMessage() 16 0x7f109254cc48 WTF::RunLoop::performWork() 17 0x7f10926401b9 WTF::RunLoop::RunLoop()::$_0::__invoke(void*) 18 0x7f109263e5d9 WTF::RunLoop::$_3::__invoke(_GSource*, int (*)(void*), void*) 19 0x7f1092900f7f g_main_dispatch 20 0x7f10929036f8 g_main_context_dispatch 21 0x7f109263ed19 WTF::RunLoop::runGLibMainLoopIteration(WTF::RunLoop::MayBlock) 22 0x7f109263f0b7 WTF::RunLoop::run() 23 0x7f10992a6c53 WebKit::WebProcessMain(int, char**) 24 0x7f108c8701ca __libc_start_call_main 25 0x7f108c87028b __libc_start_main 26 0x5586c600c8b5 _start WebKitWebProcess terminated (pid 116113) for reason: crash
Attachments
debug logging patch
(3.85 KB, patch)
2026-04-27 05:34 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
early-document-access-crash-log.txt
(17.44 KB, text/plain)
2026-04-27 05:37 PDT
,
Fujii Hironori
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2026-04-27 03:52:20 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63681
EWS
Comment 2
2026-04-27 03:54:16 PDT
Committed
312077@main
(429c0afcd7e6): <
https://commits.webkit.org/312077@main
> Reviewed commits have been landed. Closing PR #63681 and removing active labels.
Fujii Hironori
Comment 3
2026-04-27 03:55:23 PDT
GTK EWS reports a lots of crashes.
https://ews-build.s3-us-west-2.amazonaws.com/GTK-WK2-Tests-EWS/79ef0206-131322/results.html
Carlos Garcia Campos
Comment 4
2026-04-27 04:12:53 PDT
As I suspected it was a pre-existing issue.
Fujii Hironori
Comment 5
2026-04-27 04:16:25 PDT
Will take a look.
Fujii Hironori
Comment 6
2026-04-27 05:34:42 PDT
Created
attachment 479330
[details]
debug logging patch I applied this debug logging patch, and ran the following command.
> NUMBER_OF_PROCESSORS=50 ./Tools/Scripts/build-webkit --gtk --release --cmakeargs=-DENABLE_ASSERTS=1 > ./Tools/Scripts/run-webkit-tests --gtk --release --no-retry --iter=1000 --exit-after-n-crash=1 fast/dom/Document/early-document-access.html -f
Fujii Hironori
Comment 7
2026-04-27 05:37:57 PDT
Created
attachment 479331
[details]
early-document-access-crash-log.txt Then, I got this crash log.
> STDERR: CoordinatedPlatformLayer:72 0x7f577e019000 > STDERR: addLayer:66 0x7f577e019000 > (...) > STDERR: ensureTarget:111 0x7f577e019000 > (...) > STDERR: removeLayer:74 0x7f577e019000 > (...) > STDERR: invalidate:137 0x7f577e019000 > (...) > STDERR: ~CoordinatedPlatformLayer:78 0x7f577e019000 > STDERR: ASSERTION FAILED: !m_target
The CoordinatedPlatformLayer was created. ensureTarget was called. removeLayer was called. (no flush() was called)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug