[GTK][WPE] REGRESSION(312071@main): ASSERTION FAILED: !m_target in ~CoordinatedPlatformLayer() https://bugs.webkit.org/show_bug.cgi?id=313412

Unreviewed crash fix. 312071@main added a new assertion which were failing
during running layout tests. Reverted the change partially.

* Source/WebCore/platform/graphics/texmap/coordinated/CoordinatedPlatformLayer.cpp:
(WebCore::CoordinatedPlatformLayer::~CoordinatedPlatformLayer): Deleted.

Canonical link: https://commits.webkit.org/312077@main